[gd_scene load_steps=34 format=3 uid="uid://577vrlsygn3b"]

[ext_resource type="Texture2D" uid="uid://ciexkwitv41yf" path="res://Assets/Plant/Attack (44x42).png" id="1_8frh5"]
[ext_resource type="Texture2D" uid="uid://30hohxx62kwu" path="res://Assets/Plant/Hit (44x42).png" id="2_wt21e"]
[ext_resource type="Texture2D" uid="uid://cgqcelos06cb0" path="res://Assets/Plant/Idle (44x42).png" id="3_ujn7j"]
[ext_resource type="Script" uid="uid://ch0ag1vnyfylw" path="res://Scripts/plant.gd" id="4_wt21e"]
[ext_resource type="PackedScene" uid="uid://bko0phuj3etyn" path="res://Scenes/hurtbox.tscn" id="5_ujn7j"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fl1so"]
atlas = ExtResource("1_8frh5")
region = Rect2(0, 0, 44, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_b4bfk"]
atlas = ExtResource("1_8frh5")
region = Rect2(44, 0, 44, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_2oxh0"]
atlas = ExtResource("1_8frh5")
region = Rect2(88, 0, 44, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_a36j5"]
atlas = ExtResource("1_8frh5")
region = Rect2(132, 0, 44, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_guixl"]
atlas = ExtResource("1_8frh5")
region = Rect2(176, 0, 44, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_thy18"]
atlas = ExtResource("1_8frh5")
region = Rect2(220, 0, 44, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_xvlid"]
atlas = ExtResource("1_8frh5")
region = Rect2(264, 0, 44, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_msuq2"]
atlas = ExtResource("1_8frh5")
region = Rect2(308, 0, 44, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_o8v4g"]
atlas = ExtResource("2_wt21e")
region = Rect2(0, 0, 44, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_ma7eo"]
atlas = ExtResource("2_wt21e")
region = Rect2(44, 0, 44, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_n383k"]
atlas = ExtResource("2_wt21e")
region = Rect2(88, 0, 44, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_4cmuo"]
atlas = ExtResource("2_wt21e")
region = Rect2(132, 0, 44, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_co2aj"]
atlas = ExtResource("2_wt21e")
region = Rect2(176, 0, 44, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_in7y5"]
atlas = ExtResource("3_ujn7j")
region = Rect2(0, 0, 44, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_iaylx"]
atlas = ExtResource("3_ujn7j")
region = Rect2(44, 0, 44, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_xb2r1"]
atlas = ExtResource("3_ujn7j")
region = Rect2(88, 0, 44, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_rw6rb"]
atlas = ExtResource("3_ujn7j")
region = Rect2(132, 0, 44, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_shlar"]
atlas = ExtResource("3_ujn7j")
region = Rect2(176, 0, 44, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_ij17x"]
atlas = ExtResource("3_ujn7j")
region = Rect2(220, 0, 44, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_sttmf"]
atlas = ExtResource("3_ujn7j")
region = Rect2(264, 0, 44, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_l2gkj"]
atlas = ExtResource("3_ujn7j")
region = Rect2(308, 0, 44, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_ni3p3"]
atlas = ExtResource("3_ujn7j")
region = Rect2(352, 0, 44, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ljwp"]
atlas = ExtResource("3_ujn7j")
region = Rect2(396, 0, 44, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_xoik7"]
atlas = ExtResource("3_ujn7j")
region = Rect2(440, 0, 44, 42)

[sub_resource type="SpriteFrames" id="SpriteFrames_wvk64"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fl1so")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b4bfk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2oxh0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a36j5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_guixl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_thy18")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xvlid")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_msuq2")
}],
"loop": false,
"name": &"attack",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o8v4g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ma7eo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n383k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4cmuo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_co2aj")
}],
"loop": false,
"name": &"hit",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_in7y5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iaylx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xb2r1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rw6rb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_shlar")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ij17x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sttmf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l2gkj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ni3p3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ljwp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xoik7")
}],
"loop": true,
"name": &"idle",
"speed": 20.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wt21e"]
size = Vector2(179, 72)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ujn7j"]
size = Vector2(27, 34)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fl1so"]
size = Vector2(20, 4)

[node name="Plant" type="AnimatedSprite2D"]
scale = Vector2(0.75, 0.75)
sprite_frames = SubResource("SpriteFrames_wvk64")
animation = &"attack"
autoplay = "idle"
flip_h = true
script = ExtResource("4_wt21e")

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[node name="PlayerCollisionArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerCollisionArea"]
position = Vector2(94.5, -16)
shape = SubResource("RectangleShape2D_wt21e")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-1.5, 4)
shape = SubResource("RectangleShape2D_ujn7j")

[node name="Hurtbox" parent="." instance=ExtResource("5_ujn7j")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(-4, -15.3333)
shape = SubResource("RectangleShape2D_fl1so")

[connection signal="animation_finished" from="." to="." method="_on_animation_finished"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="body_entered" from="PlayerCollisionArea" to="." method="_on_player_collision_area_body_entered"]
[connection signal="body_exited" from="PlayerCollisionArea" to="." method="_on_player_collision_area_body_exited"]
